--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: DOXY
         uses: mattnotmitt/doxygen-action@v1.9.4
         with:
-          working-directory: 'submodule/'
+#          working-directory: 'submodule/'
           doxyfile-path: 'Doxygen'
       - name: Setup Pages
         uses: actions/configure-pages@v3
