--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,9 @@ jobs:
         uses: actions/checkout@v3
       - name: DOXY
         uses: mattnotmitt/doxygen-action@v1.9.4
-        with:
+#        with:
 #          working-directory: 'submodule/'
-          doxyfile-path: 'Doxygen'
+#          doxyfile-path: 'Doxygen'
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
